PostgreDB-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: postgres
#   namespace: pmn
#   labels: # Matching the labels in Deployment
#     app: postgres
# spec:
#   selector: # Matching the labels of the Deployment's template
#     app: postgres
#   ports:
#   - protocol: TCP
#     port: 5432 # Service port
#     targetPort: 5432 # Target container port
#   type: ClusterIP # Default type for internal cluster communication
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: pgsql
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - port: 5432               # Port that the service will expose
      targetPort: 5432         # Port on the container
      nodePort: 30000          # NodePort range (default: 30000-32767)
