ingress.service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    chart-version: 1.8.0
    meta.helm.sh/release-name: orc8r
    meta.helm.sh/release-namespace: pmn
    release-name: orc8r
  creationTimestamp: "2024-01-05T10:33:56Z"
  labels:
    app.kubernetes.io/component: nginx-proxy
    app.kubernetes.io/instance: orc8r
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: orc8r
    app.kubernetes.io/part-of: orc8r
    helm.sh/chart: orc8r-1.8.0
  name: orc8r-clientcert-nginx
  namespace: pgsql
  resourceVersion: "75572766"
  uid: 579e19ca-89e0-4c97-859f-7d7ea463bcf8
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: health
    port: 80
    protocol: TCP
    targetPort: 80
  - name: clientcert-legacy
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: clientcert
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/component: nginx-proxy
    app.kubernetes.io/instance: orc8r
    app.kubernetes.io/name: orc8r
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
